--- a/annie-final2-docker-compose.yaml
+++ b/annie-final2-docker-compose.yaml
@@ -121,7 +121,7 @@ services:
       SERVER_TOMCAT_ACCESSLOG_ENABLED: "true"  # Changed boolean to string
       SPRING_PROFILES_ACTIVE: dynamodb
       CARTS_DYNAMODB_ENDPOINT: http://carts-db:8000
-      CARTS_DYNAMODB_CREATETABLE: true
+      CARTS_DYNAMODB_CREATETABLE: "true"  # Changed boolean to string
       AWS_ACCESS_KEY_ID: key
       AWS_SECRET_ACCESS_KEY: dummy
     networks:   
